--- a/src/index.ejs
+++ b/src/index.ejs
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, initial-scale=1, maximum-scale=1">
     <title>MyVPN</title>
+    <link rel="apple-touch-icon" href="static/img/logo-small.png">
     <link rel="manifest" href="/manifest.json">
     <% if (htmlWebpackPlugin.options.nodeModules) { %>
       <!-- Add `node_modules/` to global paths so `require` works properly in development -->
