--- a/src/renderer/assets/element-ui/theme-myvpn/input.scss
+++ b/src/renderer/assets/element-ui/theme-myvpn/input.scss
@@ -115,7 +115,11 @@
   border-left: 1px solid #272727;
 }
 
-.el-radio__input .el-radio__inner {
+.el-radio,
+.el-radio:active,
+.el-radio:focus,
+.el-radio:active .el-radio__input .el-radio__inner,
+.el-radio:focus .el-radio__input .el-radio__inner {
   outline: none;
   box-shadow: none;
 }
