--- a/src/index.ejs
+++ b/src/index.ejs
@@ -17,11 +17,20 @@
         background: linear-gradient(5.41deg,#191919,#313131) no-repeat;
         background-attachment: fixed;
       }
+      html, body {
+        position: fixed;
+        overflow: hidden;
+      }
       #app, html, body {
         padding: 0;
         margin: 0;
         height: 100%;
         -webkit-overflow-scrolling: auto;
+        overscroll-behavior-y: none;
+      }
+      #app {
+        overflow-y: scroll;
+        -webkit-overflow-scrolling: touch;
       }
       .loading-logo {
         height: 100%;
