--- a/src/index.ejs
+++ b/src/index.ejs
@@ -26,9 +26,11 @@
         margin: 0;
         height: 100%;
         -webkit-overflow-scrolling: auto;
+        overscroll-behavior-x: none;
         overscroll-behavior-y: none;
       }
       #app {
+        overflow-x: hidden;
         overflow-y: scroll;
         -webkit-overflow-scrolling: touch;
       }
