--- a/src/index.ejs
+++ b/src/index.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, initial-scale=1, maximum-scale=1 user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>MyVPN</title>
     <link rel="apple-touch-icon" href="static/img/logo-small.png">
     <link rel="manifest" href="/manifest.json">
@@ -14,6 +14,7 @@
     <% } %>
     <style>
       body {
+        width: 100%;
         background: linear-gradient(5.41deg,#191919,#313131) no-repeat;
         background-attachment: fixed;
       }
